Fix random bug due to unit test order